Use GDAL 3.8.0 from Stage 1 repositories to build PostGIS, Mapnik, and MapServer.

--- a/docker-compose.el9.yml
+++ b/docker-compose.el9.yml
@@ -359,6 +359,8 @@ services:
       <<: *build_defaults
       args:
         <<: *build_args_defaults
+        geoint_deps_channel: non-stable/gdal-3.8.0-stage1
+        geoint_deps_gpgcheck: 0
         packages: ${RPMBUILD_MAPNIK_PACKAGES}
         rpmbuild_image: rpmbuild-pgdg
       dockerfile: docker/el9/Dockerfile.rpmbuild-geoint-pgdg
@@ -368,6 +370,8 @@ services:
       <<: *build_defaults
       args:
         <<: *build_args_defaults
+        geoint_deps_channel: non-stable/gdal-3.8.0-stage1
+        geoint_deps_gpgcheck: 0
         packages: ${RPMBUILD_MAPSERVER_PACKAGES}
       dockerfile: docker/el9/Dockerfile.rpmbuild-geoint-deps
   rpmbuild-openstreetmap-carto:
@@ -432,6 +436,8 @@ services:
       <<: *build_defaults
       args:
         <<: *build_args_defaults
+        geoint_deps_channel: non-stable/gdal-3.8.0-stage1
+        geoint_deps_gpgcheck: 0
         packages: ${RPMBUILD_POSTGIS_PACKAGES}
         rpmbuild_image: rpmbuild-pgdg
       dockerfile: docker/el9/Dockerfile.rpmbuild-geoint-pgdg
