--- a/docker-compose.el9.yml
+++ b/docker-compose.el9.yml
@@ -110,7 +110,7 @@ x-rpmbuild:
       image: rpmbuild-mapnik
       version: &mapnik_version 3.1.0-3
       defines:
-        gdal_min_version: *gdal_min_version
+        gdal_min_version: 3.7.0
         geos_min_version: *geos_min_version
         postgis_min_version: *postgis_min_version
         proj_min_version: *proj_min_version
