--- a/docker-compose.el7.yml
+++ b/docker-compose.el7.yml
@@ -28,8 +28,8 @@ x-rpmbuild:
   # Use consistent values for minimum versions for RPM build
   # and runtime requirements.
   minimum_versions:
-    gdal: &gdal_min_version 3.2.0
-    geos: &geos_min_version 3.9.0
+    gdal: &gdal_min_version 3.8.0
+    geos: &geos_min_version 3.11.0
     libosmium: &libosmium_min_version 2.18.0
     postgis_min_version: &postgis_min_version 3.1.0
     proj: &proj_min_version 7.2.0
@@ -44,7 +44,7 @@ x-rpmbuild:
       version: &CGAL_version 4.14.3-2
     FileGDBAPI:
       image: rpmbuild-generic
-      version: &FileGDBAPI_version 1.5.1-1
+      version: &FileGDBAPI_version 1.5.2-1
     SFCGAL:
       image: rpmbuild-sfcgal
       version: &SFCGAL_version 1.3.10-1
@@ -56,13 +56,13 @@ x-rpmbuild:
       version: 1.2.5-1
     gdal:
       image: rpmbuild-gdal
-      version: &gdal_version 3.2.3-3
+      version: &gdal_version 3.8.0-1
       defines:
-        geos_min_version: *geos_min_version
+        geos_min_version: 3.11.0
         proj_min_version: *proj_min_version
     geos:
       image: rpmbuild-generic
-      version: &geos_version 3.9.3-1
+      version: &geos_version 3.11.3-1
     gpsbabel:
       image: rpmbuild-gpsbabel
       version: &gpsbabel_version 1.7.0-1
@@ -101,7 +101,7 @@ x-rpmbuild:
         protobuf_min_version: *protobuf_min_version
     mapnik:
       image: rpmbuild-mapnik
-      version: &mapnik_version 3.0.24-1
+      version: &mapnik_version 3.0.24-2
       defines:
         geos_min_version: *geos_min_version
         postgis_min_version: *postgis_min_version
@@ -153,7 +153,7 @@ x-rpmbuild:
         protobuf_min_version: *protobuf_min_version
     postgis:
       image: rpmbuild-postgis
-      version: &postgis_version 3.3.2-1
+      version: &postgis_version 3.3.5-1
       defines:
         gdal_min_version: *gdal_min_version
         geos_min_version: *geos_min_version
@@ -415,6 +415,7 @@ services:
       <<: *build_defaults
       args:
         <<: *build_args_defaults
+        geoint_deps_channel: staging
         packages: ${RPMBUILD_MAPNIK_PACKAGES}
         rpmbuild_image: rpmbuild-pgdg
       dockerfile: docker/el7/Dockerfile.rpmbuild-geoint-pgdg
@@ -488,6 +489,7 @@ services:
       <<: *build_defaults
       args:
         <<: *build_args_defaults
+        geoint_deps_channel: staging
         packages: ${RPMBUILD_POSTGIS_PACKAGES}
         rpmbuild_image: rpmbuild-pgdg
       dockerfile: docker/el7/Dockerfile.rpmbuild-geoint-pgdg
